--- a/EDA/Diwali_sales/Diwali_EDA.ipynb
+++ b/EDA/Diwali_sales/Diwali_EDA.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +40,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
     "#to ignore warnings\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +237,7 @@
        "4         Gujarat   Western  Food Processing             Auto       2   23877  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +251,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.read_csv(r\"D:\\Python\\EDA\\Diwali_sales\\Diwali.csv\", encoding='utf-8', encoding_errors='ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>User_ID</th>\n",
+       "      <th>Cust_name</th>\n",
+       "      <th>Product_ID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age Group</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Marital_Status</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Zone</th>\n",
+       "      <th>Occupation</th>\n",
+       "      <th>Product_Category</th>\n",
+       "      <th>Orders</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>unnamed1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1002903</td>\n",
+       "      <td>Sanskriti</td>\n",
+       "      <td>P00125942</td>\n",
+       "      <td>F</td>\n",
+       "      <td>26-35</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Maharashtra</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>Healthcare</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23952.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1000732</td>\n",
+       "      <td>Kartik</td>\n",
+       "      <td>P00110942</td>\n",
+       "      <td>F</td>\n",
+       "      <td>26-35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>AndhraPradesh</td>\n",
+       "      <td>Southern</td>\n",
+       "      <td>Govt</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>3</td>\n",
+       "      <td>23934.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1001990</td>\n",
+       "      <td>Bindu</td>\n",
+       "      <td>P00118542</td>\n",
+       "      <td>F</td>\n",
+       "      <td>26-35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Uttar Pradesh</td>\n",
+       "      <td>Central</td>\n",
+       "      <td>Automobile</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>3</td>\n",
+       "      <td>23924.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1001425</td>\n",
+       "      <td>Sudevi</td>\n",
+       "      <td>P00237842</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0-17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Karnataka</td>\n",
+       "      <td>Southern</td>\n",
+       "      <td>Construction</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23912.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000588</td>\n",
+       "      <td>Joni</td>\n",
+       "      <td>P00057942</td>\n",
+       "      <td>M</td>\n",
+       "      <td>26-35</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Gujarat</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>Food Processing</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23877.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   User_ID  Cust_name Product_ID Gender Age Group  Age  Marital_Status  \\\n",
+       "0  1002903  Sanskriti  P00125942      F     26-35   28               0   \n",
+       "1  1000732     Kartik  P00110942      F     26-35   35               1   \n",
+       "2  1001990      Bindu  P00118542      F     26-35   35               1   \n",
+       "3  1001425     Sudevi  P00237842      M      0-17   16               0   \n",
+       "4  1000588       Joni  P00057942      M     26-35   28               1   \n",
+       "\n",
+       "           State      Zone       Occupation Product_Category  Orders   Amount  \\\n",
+       "0    Maharashtra   Western       Healthcare             Auto       1  23952.0   \n",
+       "1  AndhraPradesh  Southern             Govt             Auto       3  23934.0   \n",
+       "2  Uttar Pradesh   Central       Automobile             Auto       3  23924.0   \n",
+       "3      Karnataka  Southern     Construction             Auto       2  23912.0   \n",
+       "4        Gujarat   Western  Food Processing             Auto       2  23877.0   \n",
+       "\n",
+       "   Status  unnamed1  \n",
+       "0     NaN       NaN  \n",
+       "1     NaN       NaN  \n",
+       "2     NaN       NaN  \n",
+       "3     NaN       NaN  \n",
+       "4     NaN       NaN  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11251, 15)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "User_ID                 0\n",
+       "Cust_name               0\n",
+       "Product_ID              0\n",
+       "Gender                  0\n",
+       "Age Group               0\n",
+       "Age                     0\n",
+       "Marital_Status          0\n",
+       "State                   0\n",
+       "Zone                    0\n",
+       "Occupation              0\n",
+       "Product_Category        0\n",
+       "Orders                  0\n",
+       "Amount                 12\n",
+       "Status              11251\n",
+       "unnamed1            11251\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +494,7 @@
        "(11239, 13)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,6 +936,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1002903 1000732 1001990 ... 1001542 1004378 1005258]\n",
+      "['Sanskriti' 'Kartik' 'Bindu' ... 'Chris' 'Madan Mohan' 'Nicole']\n",
+      "['P00125942' 'P00110942' 'P00118542' ... 'P00307142' 'P00044742'\n",
+      " 'P00296942']\n",
+      "['F' 'M']\n",
+      "['26-35' '0-17' '18-25' '51-55' '46-50' '55+' '36-45']\n",
+      "[28 35 16 25 26 34 20 24 29 54 19 46 30 53 83 33 40 39 32 36 55 27 72 45\n",
+      " 43 47 22 52 18 21 38 37 23 49 42 50 48 31 44 41 66 15 51 77 87 79 71 88\n",
+      " 58 82 62 92 12 63 17 13 67 90 56 75 81 64 73 84 14 76 86 89 68 61 91 85\n",
+      " 70 80 65 74 69 78 57 60 59]\n",
+      "[0 1]\n",
+      "['Maharashtra' 'Andhra\\xa0Pradesh' 'Uttar Pradesh' 'Karnataka' 'Gujarat'\n",
+      " 'Himachal Pradesh' 'Delhi' 'Jharkhand' 'Kerala' 'Haryana'\n",
+      " 'Madhya Pradesh' 'Bihar' 'Rajasthan' 'Uttarakhand' 'Telangana' 'Punjab']\n",
+      "['Western' 'Southern' 'Central' 'Northern' 'Eastern']\n",
+      "['Healthcare' 'Govt' 'Automobile' 'Construction' 'Food Processing'\n",
+      " 'Lawyer' 'Media' 'Banking' 'Retail' 'IT Sector' 'Aviation' 'Hospitality'\n",
+      " 'Agriculture' 'Textile' 'Chemical']\n",
+      "['Auto' 'Hand & Power Tools' 'Stationery' 'Tupperware' 'Footwear & Shoes'\n",
+      " 'Furniture' 'Food' 'Games & Toys' 'Sports Products' 'Books'\n",
+      " 'Electronics & Gadgets' 'Decor' 'Clothing & Apparel' 'Beauty'\n",
+      " 'Household items' 'Pet Care' 'Veterinary' 'Office']\n",
+      "[1 3 2 4]\n",
+      "[23952 23934 23924 ...   213   206   188]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in df.columns:\n",
+    "    print(df[col].unique())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -713,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -735,12 +1011,15 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#df.isnull().sum()\n",
+    "#df.notnull().sum()\n",
+    "#df.notna().sum()\n",
     "df.isna().sum()"
    ]
   },
@@ -753,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +1041,7 @@
        "8"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,23 +1052,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Data Reduction**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(['User_ID'],axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Feature Enginerring**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def categorize(age):\n",
+    "    if age < 17.0:\n",
+    "        return 'Young'\n",
+    "    elif age<34.0:\n",
+    "        return 'Adult'\n",
+    "    elif age< 54.0:\n",
+    "        return 'Middle age'\n",
+    "    else:\n",
+    "        return 'Seniors'  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cust_name</th>\n",
+       "      <th>Product_ID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age Group</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Marital_Status</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Zone</th>\n",
+       "      <th>Occupation</th>\n",
+       "      <th>Product_Category</th>\n",
+       "      <th>Orders</th>\n",
+       "      <th>Amount</th>\n",
+       "      <th>Age_category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sanskriti</td>\n",
+       "      <td>P00125942</td>\n",
+       "      <td>F</td>\n",
+       "      <td>26-35</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Maharashtra</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>Healthcare</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23952</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Kartik</td>\n",
+       "      <td>P00110942</td>\n",
+       "      <td>F</td>\n",
+       "      <td>26-35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Andhra Pradesh</td>\n",
+       "      <td>Southern</td>\n",
+       "      <td>Govt</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>3</td>\n",
+       "      <td>23934</td>\n",
+       "      <td>Middle age</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bindu</td>\n",
+       "      <td>P00118542</td>\n",
+       "      <td>F</td>\n",
+       "      <td>26-35</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Uttar Pradesh</td>\n",
+       "      <td>Central</td>\n",
+       "      <td>Automobile</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>3</td>\n",
+       "      <td>23924</td>\n",
+       "      <td>Middle age</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sudevi</td>\n",
+       "      <td>P00237842</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0-17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Karnataka</td>\n",
+       "      <td>Southern</td>\n",
+       "      <td>Construction</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23912</td>\n",
+       "      <td>Young</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Joni</td>\n",
+       "      <td>P00057942</td>\n",
+       "      <td>M</td>\n",
+       "      <td>26-35</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Gujarat</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>Food Processing</td>\n",
+       "      <td>Auto</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23877</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(11231, 13)"
+       "   Cust_name Product_ID Gender Age Group  Age  Marital_Status           State  \\\n",
+       "0  Sanskriti  P00125942      F     26-35   28               0     Maharashtra   \n",
+       "1     Kartik  P00110942      F     26-35   35               1  Andhra Pradesh   \n",
+       "2      Bindu  P00118542      F     26-35   35               1   Uttar Pradesh   \n",
+       "3     Sudevi  P00237842      M      0-17   16               0       Karnataka   \n",
+       "4       Joni  P00057942      M     26-35   28               1         Gujarat   \n",
+       "\n",
+       "       Zone       Occupation Product_Category  Orders  Amount Age_category  \n",
+       "0   Western       Healthcare             Auto       1   23952        Adult  \n",
+       "1  Southern             Govt             Auto       3   23934   Middle age  \n",
+       "2   Central       Automobile             Auto       3   23924   Middle age  \n",
+       "3  Southern     Construction             Auto       2   23912        Young  \n",
+       "4   Western  Food Processing             Auto       2   23877        Adult  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Data = df.drop_duplicates()\n",
-    "Data.shape"
+    "df['Age_category'] = df['Age'].apply(categorize)\n",
+    "df.head()"
    ]
   },
   {
