--- a/EDA/Euromart/New_EDA.ipynb
+++ b/EDA/Euromart/New_EDA.ipynb
@@ -2040,6 +2040,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Finding the Insights**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
