--- a/EDA/Diwali_sales/Diwali_EDA.ipynb
+++ b/EDA/Diwali_sales/Diwali_EDA.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **Problem Statement**\n",
     "With the upcoming Diwali season, there is a need to develop a comprehensive marketing strategy to maximize sales and optimize inventory management for a retail business. Based on historical sales data, the goal is to identify key regional trends, zone-wise strategies, product focus areas, insights from product IDs, order frequency tactics, and targeted demographic segments. The objective is to leverage this information to tailor marketing efforts, inventory planning, and promotional activities effectively, ultimately driving higher sales during the Diwali period."
    ]
   },
