--- a/EDA/Euromart/New_EDA.ipynb
+++ b/EDA/Euromart/New_EDA.ipynb
@@ -1316,7 +1316,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       50\n",
+       "1        0\n",
+       "2        0\n",
+       "3       50\n",
+       "4       50\n",
+       "        ..\n",
+       "8042     0\n",
+       "8043    50\n",
+       "8044    50\n",
+       "8045    50\n",
+       "8046     0\n",
+       "Name: Discount, Length: 8045, dtype: int32"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Discount'] = df['Discount']*100\n",
+    "df['Discount'].astype('int')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1418,7 @@
        "      <td>Office Supplies</td>\n",
        "      <td>Paper</td>\n",
        "      <td>Enermax Note Cards, Premium</td>\n",
-       "      <td>0.5</td>\n",
+       "      <td>50.0</td>\n",
        "      <td>45</td>\n",
        "      <td>-26</td>\n",
        "      <td>3</td>\n",
@@ -1455,7 +1487,7 @@
        "      <td>Office Supplies</td>\n",
        "      <td>Art</td>\n",
        "      <td>Boston Markers, Easy-Erase</td>\n",
-       "      <td>0.5</td>\n",
+       "      <td>50.0</td>\n",
        "      <td>27</td>\n",
        "      <td>-22</td>\n",
        "      <td>2</td>\n",
@@ -1478,7 +1510,7 @@
        "      <td>Office Supplies</td>\n",
        "      <td>Storage</td>\n",
        "      <td>Eldon Folders, Single Width</td>\n",
-       "      <td>0.5</td>\n",
+       "      <td>50.0</td>\n",
        "      <td>17</td>\n",
        "      <td>-1</td>\n",
        "      <td>2</td>\n",
@@ -1508,11 +1540,11 @@
        "4  Birmingham    North    Corporate       Economy  Office Supplies   \n",
        "\n",
        "  Sub-Category                           Product Name  Discount  Sales  \\\n",
-       "0        Paper            Enermax Note Cards, Premium       0.5     45   \n",
+       "0        Paper            Enermax Note Cards, Premium      50.0     45   \n",
        "1    Bookcases     Dania Corner Shelving, Traditional       0.0    854   \n",
        "2          Art  Binney & Smith Sketch Pad, Easy-Erase       0.0    140   \n",
-       "3          Art             Boston Markers, Easy-Erase       0.5     27   \n",
-       "4      Storage            Eldon Folders, Single Width       0.5     17   \n",
+       "3          Art             Boston Markers, Easy-Erase      50.0     27   \n",
+       "4      Storage            Eldon Folders, Single Width      50.0     17   \n",
        "\n",
        "   Profit  Quantity Feedback?  Year  Month  Total_Sales  Total_Profit  \n",
        "0     -26         3     False  2011      1          135           -78  \n",
@@ -1522,7 +1554,7 @@
        "4      -1         2      True  2011      1           34            -2  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1582,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1613,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1760,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2048,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2058,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2092,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2109,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2126,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2143,7 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2157,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2262,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2311,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2325,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2558,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
