--- a/Pandas/Datasets/Titanic Pandas.ipynb
+++ b/Pandas/Datasets/Titanic Pandas.ipynb
@@ -5892,7 +5892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -5930,42 +5930,49 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Cherbourg</th>\n",
-       "      <td>8.588235</td>\n",
-       "      <td>34.090909</td>\n",
-       "      <td>33.169492</td>\n",
+       "      <td>17</td>\n",
+       "      <td>77</td>\n",
+       "      <td>59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Queenstown</th>\n",
-       "      <td>7.200000</td>\n",
-       "      <td>33.689655</td>\n",
-       "      <td>27.750000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>29</td>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Southampton</th>\n",
-       "      <td>5.683333</td>\n",
-       "      <td>32.821958</td>\n",
-       "      <td>31.722892</td>\n",
+       "      <td>60</td>\n",
+       "      <td>337</td>\n",
+       "      <td>166</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "who             child        man      woman\n",
-       "embark_town                                \n",
-       "Cherbourg    8.588235  34.090909  33.169492\n",
-       "Queenstown   7.200000  33.689655  27.750000\n",
-       "Southampton  5.683333  32.821958  31.722892"
+       "who          child  man  woman\n",
+       "embark_town                   \n",
+       "Cherbourg       17   77     59\n",
+       "Queenstown       5   29     24\n",
+       "Southampton     60  337    166"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.pivot_table(index='embark_town', columns='who', values='Age', aggfunc='mean')"
+    "df.pivot_table(index='embark_town', columns='who', values='Age', aggfunc='count')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
