--- a/Pandas/Datasets/Titanic Pandas.ipynb
+++ b/Pandas/Datasets/Titanic Pandas.ipynb
@@ -5969,10 +5969,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>class</th>\n",
+       "      <th>First</th>\n",
+       "      <th>Second</th>\n",
+       "      <th>Third</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>embark_town</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cherbourg</th>\n",
+       "      <td>83</td>\n",
+       "      <td>17</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Queenstown</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Southampton</th>\n",
+       "      <td>127</td>\n",
+       "      <td>144</td>\n",
+       "      <td>292</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "class        First  Second  Third\n",
+       "embark_town                      \n",
+       "Cherbourg       83      17     53\n",
+       "Queenstown       3       2     53\n",
+       "Southampton    127     144    292"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_tab = pd.crosstab(df['embark_town'], df['class'])\n",
+    "cross_tab"
+   ]
   }
  ],
  "metadata": {
