--- a/Pandas/Datasets/Titanic Pandas.ipynb
+++ b/Pandas/Datasets/Titanic Pandas.ipynb
@@ -2560,6 +2560,514 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>survived</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>class</th>\n",
+       "      <th>who</th>\n",
+       "      <th>adult_male</th>\n",
+       "      <th>embark_town</th>\n",
+       "      <th>alone</th>\n",
+       "      <th>alone_n</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>First</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51.8625</td>\n",
+       "      <td>First</td>\n",
+       "      <td>man</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>881</th>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.8958</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>man</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>882</th>\n",
+       "      <td>0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.5167</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>883</th>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.5000</td>\n",
+       "      <td>Second</td>\n",
+       "      <td>man</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>First</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23.4500</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>563 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     survived     sex  Age  sibsp  parch     fare   class    who  adult_male  \\\n",
+       "0           0    male   22      1      0   7.2500   Third    man           1   \n",
+       "2           1  female   26      0      0   7.9250   Third  woman           0   \n",
+       "3           1  female   35      1      0  53.1000   First  woman           0   \n",
+       "4           0    male   35      0      0   8.0500   Third    man           1   \n",
+       "6           0    male   54      0      0  51.8625   First    man           1   \n",
+       "..        ...     ...  ...    ...    ...      ...     ...    ...         ...   \n",
+       "881         0    male   33      0      0   7.8958   Third    man           1   \n",
+       "882         0  female   22      0      0  10.5167   Third  woman           0   \n",
+       "883         0    male   28      0      0  10.5000  Second    man           1   \n",
+       "887         1  female   19      0      0  30.0000   First  woman           0   \n",
+       "888         0  female   30      1      2  23.4500   Third  woman           0   \n",
+       "\n",
+       "     embark_town  alone  alone_n  \n",
+       "0    Southampton  False        0  \n",
+       "2    Southampton   True        1  \n",
+       "3    Southampton  False        0  \n",
+       "4    Southampton   True        1  \n",
+       "6    Southampton   True        1  \n",
+       "..           ...    ...      ...  \n",
+       "881  Southampton   True        1  \n",
+       "882  Southampton   True        1  \n",
+       "883  Southampton   True        1  \n",
+       "887  Southampton   True        1  \n",
+       "888  Southampton  False        0  \n",
+       "\n",
+       "[563 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#df[df['method'].str.endswith('g')]\n",
+    "df[df['embark_town'].str.startswith('S')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>survived</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>class</th>\n",
+       "      <th>who</th>\n",
+       "      <th>adult_male</th>\n",
+       "      <th>embark_town</th>\n",
+       "      <th>alone</th>\n",
+       "      <th>alone_n</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.0750</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>child</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0708</td>\n",
+       "      <td>Second</td>\n",
+       "      <td>child</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.7000</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>child</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.8542</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>child</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29.1250</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>child</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Queenstown</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>831</th>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18.7500</td>\n",
+       "      <td>Second</td>\n",
+       "      <td>child</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>850</th>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>31.2750</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>child</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>852</th>\n",
+       "      <td>0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.2458</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>child</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>869</th>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.1333</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>child</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>875</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2250</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>child</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>82 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     survived     sex  Age  sibsp  parch     fare   class    who  adult_male  \\\n",
+       "7           0    male    2      3      1  21.0750   Third  child           0   \n",
+       "9           1  female   14      1      0  30.0708  Second  child           0   \n",
+       "10          1  female    4      1      1  16.7000   Third  child           0   \n",
+       "14          0  female   14      0      0   7.8542   Third  child           0   \n",
+       "16          0    male    2      4      1  29.1250   Third  child           0   \n",
+       "..        ...     ...  ...    ...    ...      ...     ...    ...         ...   \n",
+       "831         1    male    0      1      1  18.7500  Second  child           0   \n",
+       "850         0    male    4      4      2  31.2750   Third  child           0   \n",
+       "852         0  female    9      1      1  15.2458   Third  child           0   \n",
+       "869         1    male    4      1      1  11.1333   Third  child           0   \n",
+       "875         1  female   15      0      0   7.2250   Third  child           0   \n",
+       "\n",
+       "     embark_town  alone  alone_n  \n",
+       "7    Southampton  False        0  \n",
+       "9      Cherbourg  False        0  \n",
+       "10   Southampton  False        0  \n",
+       "14   Southampton   True        1  \n",
+       "16    Queenstown  False        0  \n",
+       "..           ...    ...      ...  \n",
+       "831  Southampton  False        0  \n",
+       "850  Southampton  False        0  \n",
+       "852    Cherbourg  False        0  \n",
+       "869  Southampton  False        0  \n",
+       "875    Cherbourg   True        1  \n",
+       "\n",
+       "[82 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['who'].str.contains('child')]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "change Data Type"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [],
@@ -2773,6 +3281,15 @@
    "outputs": [],
    "source": [
     "df.rename(columns={'age':'Age'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['adult_male'].replace({True:1, False:0}, inplace=True)"
    ]
   },
   {
