--- a/Regression/linear_Multi.ipynb
+++ b/Regression/linear_Multi.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "import statsmodels.api as sm\n",
     "from sklearn.model_selection import train_test_split \n",
     "from sklearn.linear_model import LinearRegression\n",
